gcc/testsuite/gcc.target/aarch64/sve/acle/general-c/type_redef_4.c
/* { dg-do compile } */

int svfloat32_t; /* { dg-message "note: previous declaration of 'svfloat32_t'" } */

#pragma GCC aarch64 "arm_sve.h"  /* { dg-error {'svfloat32_t' redeclared} } */
